# AnswerKing-Python

./: .env.develop  .env.production  .gitignore  DockerFile  Dockerfile  Dockerfile.old  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt  schema.yaml  sonar-project.properties
.github/: dependabot.yml
.github/actions/dependencies/: action.yml
.github/workflows/: CodeAnalysisCI.yml  IntegrationCI.yml  aws-ecr.yml  ci.yml  create_docker_package.yml  deploy.yml  docker.yml  linting.yml  sonarcloud.yml  test.yml
answerking/: asgi.py  settings.py  urls.py  wsgi.py
answerking/settings/: base.py  development.py  ecs.py
answerking_app/: admin.py  apps.py
answerking_app/management/commands/: waitForDB.py
answerking_app/migrations/: 0001_initial.py  0002_alter_category_name_alter_item_calories_and_more.py  0002_tag.py  0003_category_retired_item_retired.py
answerking_app/models/: models.py  serializers.py
answerking_app/models/permissions/: auth_permissions.py
answerking_app/models/validation/: serializers.py  validators.py
answerking_app/services/: category_service.py  item_service.py  order_service.py
answerking_app/services/service_types/: CategoryTypes.py  ItemTypes.py  OrderTypes.py
answerking_app/tests/: API_types.py  BaseTestClass.py  test_categories.py  test_items.py  test_orderlines.py  test_orders.py  test_products.py  test_unit_model.py  test_unit_serializer.py
answerking_app/tests/fixtures/category/: basic-1.json  basic-2.json
answerking_app/tests/snapshots/: snap_test_categories.py  snap_test_items.py  snap_test_products.py
answerking_app/tests/test_integration/: IntegrationTestBaseClass.py  test_categories.py  test_orders.py  test_products.py  test_tags.py
answerking_app/tests/test_unit/: UnitTestBaseClass.py  test_unit_category_detail_serializer.py  test_unit_category_serializer.py  test_unit_line_item_serializer.py  test_unit_lineitem_product_serializer.py  test_unit_model.py  test_unit_order_serializer.py  test_unit_productdetailserializer.py  test_unit_productserializer.py  test_unit_productserializerreadonly.py  test_unit_retiremixin.py  test_unit_serializer.py  test_unit_tag_serializer.py  test_unit_utils.py
answerking_app/urls/: auth_url.py  auth_urls.py  category_urls.py  item_urls.py  order_urls.py  product_urls.py  tag_urls.py
answerking_app/utils/: ErrorType.py  exceptions_handler.py  get_ecs_ips.py  get_object_or_400.py  json404_middleware_config.py  model_types.py  serializer_data_functions.py  url_parameter_check.py
answerking_app/utils/mixins/: ApiExceptions.py  CategoryItemMixins.py  CategoryProductMixins.py  GenericMixins.py  IntegrityHandlerMixins.py  ItemMixins.py  NotFoundDetailMixins.py  OrderItemMixins.py  OrderProductMixins.py  ProductMixins.py  RetireMixin.py  SerializeErrorDetailRFCMixins.py
answerking_app/utils/schema/: schema_examples.py
answerking_app/views/: ErrorType.py  auth_views.py  category_views.py  item_views.py  order_views.py  product_views.py  tag_views.py  tags_views.py
terraform/ecs_fargate/: backend.tf  ecr.tf  ecs.tf  iam.tf  lb.tf  logs.tf  logs_s3.tf  main.tf  providers.tf  route53.tf  sg.tf  variables.tf
(+128 files in other folders)
