[tool.poetry]
name = "answerking-python"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "answerking_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
djangorestframework = "^3.14.0"
mysqlclient = "^2.1.1"
django-cors-headers = "^3.13.0"
drf-writable-nested = "^0.7.0"
django-json-404-middleware = { git = "https://github.com/Axeltherabbit/django-json-404-middleware" }
python-dotenv = "^0.21.0"
drf-problems = { git = "https://github.com/Axeltherabbit/drf-problems" }
typing-extensions = "^4.4.0"
django-stubs = {extras = ["compatible-mypy"], version = "^1.13.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pyright = "^1.1.278"
coverage = "^6.5.0"
pycodestyle = "^2.9.1"
drf-yasg = "^1.21.4"
assertpy = "^1.1"
snapshottest = "^0.6.0"
ddt = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
force-exclude='''
migrations
'''
